--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+:root {
+  --soft-cyan: hsl(174, 77%, 80%);
+  --strong-cyan: hsl(174, 86%, 45%);
+}
+
 *,
 *::before,
 *::after {
@@ -12,5 +17,7 @@ html {
 
 body {
   box-sizing: border-box;
-  background-color: cadetblue;
+  font-family: 'Manrope', sans-serif;
+  font-weight: 600;
+  background: url('../public/images/bg-pattern.svg') no-repeat;
 }
