--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,9 +1,20 @@
+.header {
+    background: url('../../public/images/pattern-circles.svg') no-repeat center;
+    height: 14.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin: 5rem auto;
+    max-width: 87%;
+}
+
 .main {
-    font-size: 2.5rem;
-    color: red;
+    font-size: 2rem;
+    font-weight: 800;
 }
 
 .secondary {
-    font-size: 2rem;
-    color: yellow;
+    font-size: 1.3rem;
+
 }
