--- a/src/components/card.module.scss
+++ b/src/components/card.module.scss
@@ -14,4 +14,47 @@
     .pageview {
         color: var(--neutral-700)
     }
+
+    .billingTag {
+        .price {
+            color: var(--neutral-900);
+            font-size: 3.2rem;
+        }
+
+        .monthly {
+            color: var(--primary-900);
+            font-size: 1.4rem;
+        }
+    }
+
+    .billing {
+        display: flex;
+        margin: 3rem 0;
+
+        gap: 1.6rem;
+
+        .text {
+            align-self: center;
+            font-size: 1.2rem;
+            color: var(--neutral-700)
+        }
+
+        .toggleContainer {
+            display: flex;
+            align-items: center;
+            width: 4.3rem;
+            height: 2.2rem;
+            border-radius: 15px;
+            padding: 0 0.5rem;
+            background-color: var(--neutral-500);
+
+            .button {
+                background-color: white;
+                height: 1.4rem;
+                width: 1.4rem;
+                border-radius: 100px;
+
+            }
+        }
+    }
 }
