--- a/src/globals.scss
+++ b/src/globals.scss
@@ -28,5 +28,5 @@ body {
   box-sizing: border-box;
   font-family: 'Manrope', sans-serif;
   font-weight: 600;
-  background: url('../public/images/bg-pattern.svg') no-repeat;
+  background: url('./images/bg-pattern.svg') no-repeat;
 }
