--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,5 +1,5 @@
 .header {
-    background: url('../../public/images/pattern-circles.svg') no-repeat center;
+    background: url('../images/pattern-circles.svg') no-repeat center;
     height: 14.5rem;
     display: flex;
     flex-direction: column;
