--- a/src/components/slider.module.scss
+++ b/src/components/slider.module.scss
@@ -29,7 +29,7 @@
 .button {
     height: 4rem;
     width: 4rem;
-    background: var(--primary-300) url('../../public/images/icon-slider.svg') no-repeat;
+    background: var(--primary-300) url('../images/icon-slider.svg') no-repeat;
     background-position: center;
     border-radius: 50%;
     margin-top: -25px;
